
add_subdirectory(lspg_residual_policy_norms)
add_subdirectory(preconditioned_lspg_correctness)
add_subdirectory(masked_lspg_correctness)
add_subdirectory(sharedmem_hyper_reduced_lspg_eigen)
add_subdirectory(preconditioned_hyper_reduced_steady_correctness)
add_subdirectory(sharedmem_preconditioned_hyper_reduced_lspg_eigen)
