add_subdirectory(lspg_euler_normal_eq)
add_subdirectory(lspg_bdf2_normal_eq)
add_subdirectory(lspg_euler_normal_eq_residual_api)
add_subdirectory(wls_euler_normal_eq_velocity_api)
add_subdirectory(wls_bdf2_normal_eq_velocity_api)

add_subdirectory(lspg_euler_normal_eq_residual_api_user_defined_mapping)

add_subdirectory(galerkin_bdf1_residual_api)